# Lumina

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/lumina/core/: matrix.hpp  vector.hpp
include/lumina/detail/core/: matrix.tpp  vector.tpp
include/lumina/detail/linearalgebra/: cholesky.tpp  eigen_solvers.tpp  gaussian_elimination.tpp  iterative_solvers.tpp  lu_decomposition.tpp
include/lumina/linearalgebra/: cholesky.hpp  eigen_solvers.hpp  gaussian_elimination.hpp  iterative_solvers.hpp  lu_decomposition.hpp
include/lumina/ode/: euler.hpp  runge_kutta.hpp
src/ode/: euler.cpp  runge_kutta.cpp
tests/: test_cholesky.cpp  test_eigen.cpp  test_matrix.cpp  test_ode.cpp  test_solvers.cpp  test_vector.cpp
